cmake_minimum_required(VERSION 3.15.0)
project(App)
set(DCMAKE_CXX_COMPILER "C:/mingw64/bin/g++.exe")
set(DCMAKE_CXX_COMPILER_TARGET "x86_64-w64-mingw32")
set(CDIR ${CDIR} "F:/C_C++ coding/NVim Training")
set(MAIN ${MAIN} ${CDIR}/test.cpp)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CDIR})
set(CMAKE_EXPORT_COMPILE_COMMANDS ON ${CDIR})

add_executable(${PROJECT_NAME} ${MAIN})
target_compile_options(${PROJECT_NAME} PUBLIC -g -Wall -Werror -std=c++17 -O3)
